# vtether

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  Vagrantfile  build.rs  vtether.yaml
.github/workflows/: build.yml  release.yml
examples/: vtether-xdp-proxy.rs
src/: main.rs
vtether-cli/: Cargo.toml  build.rs
vtether-cli/examples/: vtether-xdp-proxy.rs
vtether-cli/src/: gc.rs  helper.rs  inspect.rs  main.rs  proxy.rs  setup.rs
vtether-ebpf/: Cargo.toml
vtether-ebpf/src/: conntrack.rs  csum.rs  main.rs  nat.rs  parse.rs  stats.rs
vtether-xdp/: Cargo.toml  DATAFLOW.md
vtether-xdp/src/: conntrack.rs  csum.rs  fib.rs  lb.rs  main.rs  nat.rs  parse.rs  stats.rs
vtether-xdp2/: Cargo.toml
vtether-xdp2/src/: conntrack.rs  lb.rs  main.rs  nat.rs  parse.rs  stats.rs
