[workspace]
members = ["vtether-xdp", "vtether-cli"]
default-members = ["vtether-cli"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
inline_always = "allow"

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.release]
lto = true
