[package]
name = "vtether-cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "vtether"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
aya = "0.13"
aya-log = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
nix = { version = "0.30", features = ["net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
aya-build = "0.1"
